--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ background: '/img/bg-index.jpg'
 <div class="rounded mb-5 hero">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
-      <h1 class="font-weight-bold mb-4 serif-font">Let me  teach you how to become successful online</h1>
-      <p class="lead mb-4">My name is Lyam and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
-      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
+      <h1 class="font-weight-bold mb-4 serif-font">Այստեղ կգտնեք  ՏՏ, արհեստական ինտելեկտի և թվային ոլորտին առնչվող նորություններ։</h1>
+      <p class="lead mb-4">Ես Մոնիկան եմ,այս բլոգում  փորձում եմ լրացնել համացանցում ՏՏ ոլորտի հայալեզու նյութերի բացը։</p>
+      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Իմ մասին</a>
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
-      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.svg">      
+      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.jpg">      
     </div>
   </div>
 </div>
