--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,15 +6,15 @@ comments: false
 ---
 
 <form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Thank you for your interest in getting in touch with us. Please send your message here. We will reply as soon as possible!</p>
+<p class="mb-4">Շնորհակալություն մեզ հետ կապ հաստատելու ձեր հետաքրքրության համար: Խնդրում ենք ուղարկել ձեր հաղորդագրությունը այստեղ: Մենք կպատասխանենք հնարավորինս շուտ։</p>
 <div class="form-group row">
 <div class="col-md-6">
-<input class="form-control" type="text" name="name" placeholder="Name*" required>
+<input class="form-control" type="text" name="name" placeholder="Անուն*" required>
 </div>
 <div class="col-md-6">
 <input class="form-control" type="email" name="_replyto" placeholder="E-mail Address*" required>
 </div>
 </div>
-<textarea rows="8" class="form-control mb-3" name="message" placeholder="Message*" required></textarea>    
-<input class="btn btn-dark" type="submit" value="Send">
+<textarea rows="8" class="form-control mb-3" name="message" placeholder="Հաղորդագրություն*" required></textarea>    
+<input class="btn btn-dark" type="submit" value="Ուղարկել">
 </form>
