--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background: '/img/bg-index.jpg'
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Այստեղ կգտնեք  ՏՏ, արհեստական ինտելեկտի և թվային ոլորտին առնչվող նյութեր և նորություններ։</h1>
-      <p class="lead mb-4">Ես Մոնիկան եմ,այս բլոգում  փորձում եմ լրացնել համացանցում ՏՏ ոլորտի հայալեզու նյութերի բացը և գրում եմ ինձ հետաքրքիր թեմաների շուրջ։</p>
+      <p class="lead mb-4">Ես Մոնիկան եմ,գրում եմ ինձ հետաքրքիր թեմաների շուրջ։</p>
       <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Իմ մասին</a>
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
